<resources>
    <string name="app_name">CDIO8-Solitaire-Solver</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="settings_fragment_label">Setting Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Tilbage</string>
    <string name="title_da">7 kabale</string>
    <string name="startgame">Start spil</string>


    <!-- Settings -->
    <string name="settings_rules_da">Sådan bruger du appen:</string>
    <string name="first_instruction">1. Tryk start spil</string>
    <string name="second_instruction">2. Læg din 7-kabale op på en flad overflade</string>
    <string name="third_instruction">3. Tag et billede af din oplagte kabale</string>
    <string name="fourth_instruction">4. Lav trækket som appen forslår på din kabale</string>
    <string name="fifth_instruction">5. Tag et billede af den ændrede kabale</string>
    <string name="sixth_instruction">6. Fortsæt sådan til kabalen enten er løst eller tabt</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="take_picture">Tag billede</string>
    <string name="info">For at starte spillet, tag et billede af din oplagte 7-kabale</string>
    <string name="tag_billede">Scan igen</string>
    <string name="træk">Du kan lave følgende træk:</string>
    <string name="_7_kabale">7-kabale</string>
    <string name="gruppe_8">Gruppe 8</string>
</resources>
